# BlackHole-Simulation

./: CMakeLists.txt  README.md
core/: physics.h
include/glad/: glad.h
src/: 3d_black_hole.cpp  black_hole.cpp  glad.c  prototype_3d_cpu.cpp  prototype_3d_gpu.cpp  shader.frag  shader.vert  x.cpp
